deploy: 194c1444a55b7070c86c22ac4fdd6716b2bb46f4

--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.DoUpJQeO.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.D8j6V96t.js"></script>
+    <script type="module" src="/assets/app.DxCMHXR-.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme._WkfvFRg.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.UftwrQvb.js">
     <link rel="modulepreload" href="/assets/chunks/framework.CkHWihve.js">
     <link rel="modulepreload" href="/assets/about.md.DTCy8J6F.lean.js">
     <link rel="icon" href="logo.svg">
