deploy: d31c890df5cbfb1ea013cb4b7f8e81ef1eeaff1f

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="preload stylesheet" href="/assets/style.DoUpJQeO.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.OQ7odpt3.js"></script>
+    <script type="module" src="/assets/app.CrsrQ8-F.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
     <link rel="icon" href="logo.svg">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script>window.__VP_HASH_MAP__=JSON.parse("{\"about.md\":\"DTCy8J6F\",\"command.md\":\"BNAsuvkK\",\"donate.md\":\"BR2kY8M1\",\"faq.md\":\"BIasRMiB\",\"index.md\":\"CR5AGjIU\",\"items.md\":\"B7e3e4So\",\"join.md\":\"BnooDSDH\",\"oneblock.md\":\"rMkYeW90\",\"qq.md\":\"Bme3aR6b\",\"rule.md\":\"rCdZ_AVK\",\"server.md\":\"BzVnxU_7\",\"skyblock.md\":\"DmkfxDEd\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"NCJE\",\"description\":\"NCJE Wiki\",\"base\":\"/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"search\":{\"provider\":\"local\"},\"footer\":{\"copyright\":\"Copyright © 2025 NCJE 我的世界公益生存服务器\"},\"nav\":[{\"text\":\"主页\",\"link\":\"/\"},{\"text\":\"文档\",\"link\":\"/about\"}],\"sidebar\":[{\"text\":\"文档\",\"items\":[{\"text\":\"关于服务器\",\"link\":\"/about\"},{\"text\":\"玩家守则\",\"link\":\"/rule\",\"items\":[{\"text\":\"QQ群规定\",\"link\":\"/qq\"},{\"text\":\"服务器规定\",\"link\":\"/server\"}]},{\"text\":\"加入服务器\",\"link\":\"/join\"},{\"text\":\"常见问题\",\"link\":\"/faq\"},{\"text\":\"赞助相关\",\"link\":\"/donate\"}]}],\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/N-Creeper/ncje-wiki\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false}");</script>
+    <script>window.__VP_HASH_MAP__=JSON.parse("{\"about.md\":\"DTCy8J6F\",\"command.md\":\"BNAsuvkK\",\"donate.md\":\"BR2kY8M1\",\"faq.md\":\"BIasRMiB\",\"fishing.md\":\"Bjp6xO4l\",\"index.md\":\"CR5AGjIU\",\"items.md\":\"B7e3e4So\",\"join.md\":\"BnooDSDH\",\"oneblock.md\":\"rMkYeW90\",\"qq.md\":\"Bme3aR6b\",\"rule.md\":\"rCdZ_AVK\",\"server.md\":\"BzVnxU_7\",\"skyblock.md\":\"DmkfxDEd\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"NCJE\",\"description\":\"NCJE Wiki\",\"base\":\"/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"search\":{\"provider\":\"local\"},\"footer\":{\"copyright\":\"Copyright © 2025 NCJE 我的世界公益生存服务器\"},\"nav\":[{\"text\":\"主页\",\"link\":\"/\"},{\"text\":\"文档\",\"link\":\"/about\"}],\"sidebar\":[{\"text\":\"文档\",\"items\":[{\"text\":\"关于服务器\",\"link\":\"/about\"},{\"text\":\"玩家守则\",\"link\":\"/rule\",\"items\":[{\"text\":\"QQ群规定\",\"link\":\"/qq\"},{\"text\":\"服务器规定\",\"link\":\"/server\"}]},{\"text\":\"加入服务器\",\"link\":\"/join\"},{\"text\":\"常见问题\",\"link\":\"/faq\"},{\"text\":\"赞助相关\",\"link\":\"/donate\"}]}],\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/N-Creeper/ncje-wiki\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false}");</script>
     
   </body>
 </html>
